--- a/RedRainDemo/RedRainDemo/Base.lproj/Main.storyboard
+++ b/RedRainDemo/RedRainDemo/Base.lproj/Main.storyboard
@@ -103,11 +103,22 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wKP-0q-S9K">
+                                <color key="backgroundColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="KbD-rT-VYI"/>
+                                    <constraint firstAttribute="width" constant="60" id="q4T-1F-lmy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="停止"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="oO3-4h-XmL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="2AX-P3-uTG"/>
                             <constraint firstItem="BpR-Nn-3yW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="KFC-B4-URI"/>
+                            <constraint firstItem="wKP-0q-S9K" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="KkM-oe-Vvo"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wKP-0q-S9K" secondAttribute="bottom" constant="20" id="MKm-dW-9yW"/>
                             <constraint firstItem="Ca7-rj-mwo" firstAttribute="leading" secondItem="1XQ-0C-Db8" secondAttribute="trailing" constant="10" id="OHt-fA-HGK"/>
                             <constraint firstItem="zGt-dN-WDk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="PFD-eS-WiO"/>
                             <constraint firstItem="Ca7-rj-mwo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="R8V-g1-H1j"/>
@@ -133,6 +144,7 @@
                         <outlet property="selectedLabel" destination="oO3-4h-XmL" id="BBr-pc-D3l"/>
                         <outlet property="selectedLabelBottom" destination="uNS-8A-gMa" id="6Zd-oc-weS"/>
                         <outlet property="startBtn" destination="dNL-ee-KXW" id="rLO-Cc-nwt"/>
+                        <outlet property="stop" destination="wKP-0q-S9K" id="PtK-KP-2Fp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
